crates/weaver-e2e/tests/snapshots/python_complex_types.snap
---
source: crates/weaver-e2e/tests/get_card_snapshots.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe get-card --uri <uri> --position 3:5 --detail structure",
  "status": 0,
  "stdout": "{\n  \"card\": {\n    \"card_version\": 1,\n    \"etag\": \"<etag>\",\n    \"metrics\": {\n      \"cyclomatic\": 1,\n      \"lines\": 2\n    },\n    \"provenance\": {\n      \"extracted_at\": \"<timestamp>\",\n      \"sources\": [\n        \"tree_sitter\"\n      ]\n    },\n    \"signature\": {\n      \"display\": \"def project(values: Dict[str, Union[int, str]], key: Optional[str]) -> str:\",\n      \"params\": [\n        {\n          \"name\": \"values\",\n          \"type\": \"Dict[str, Union[int, str]]\"\n        },\n        {\n          \"name\": \"key\",\n          \"type\": \"Optional[str]\"\n        }\n      ],\n      \"returns\": \"str\"\n    },\n    \"structure\": {\n      \"branches\": [],\n      \"locals\": []\n    },\n    \"symbol\": {\n      \"ref\": {\n        \"kind\": \"function\",\n        \"language\": \"python\",\n        \"name\": \"project\",\n        \"range\": {\n          \"end\": {\n            \"column\": 44,\n            \"line\": 3\n          },\n          \"start\": {\n            \"column\": 0,\n            \"line\": 2\n          }\n        },\n        \"uri\": \"<uri>\"\n      },\n      \"symbol_id\": \"<symbol_id>\"\n    }\n  },\n  \"status\": \"success\"\n}",
  "stderr": ""
}
