crates/weaver-e2e/tests/snapshots/python_control_flow.snap
---
source: crates/weaver-e2e/tests/get_card_snapshots.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe get-card --uri <uri> --position 1:5 --detail structure",
  "status": 0,
  "stdout": "{\n  \"card\": {\n    \"card_version\": 1,\n    \"etag\": \"<etag>\",\n    \"metrics\": {\n      \"cyclomatic\": 4,\n      \"lines\": 7\n    },\n    \"provenance\": {\n      \"extracted_at\": \"<timestamp>\",\n      \"sources\": [\n        \"tree_sitter\"\n      ]\n    },\n    \"signature\": {\n      \"display\": \"def classify(value: int) -> str:\",\n      \"params\": [\n        {\n          \"name\": \"value\",\n          \"type\": \"int\"\n        }\n      ],\n      \"returns\": \"str\"\n    },\n    \"structure\": {\n      \"branches\": [\n        {\n          \"kind\": \"if\",\n          \"line\": 1\n        },\n        {\n          \"kind\": \"for\",\n          \"line\": 3\n        },\n        {\n          \"kind\": \"if\",\n          \"line\": 4\n        }\n      ],\n      \"locals\": []\n    },\n    \"symbol\": {\n      \"ref\": {\n        \"kind\": \"function\",\n        \"language\": \"python\",\n        \"name\": \"classify\",\n        \"range\": {\n          \"end\": {\n            \"column\": 18,\n            \"line\": 6\n          },\n          \"start\": {\n            \"column\": 0,\n            \"line\": 0\n          }\n        },\n        \"uri\": \"<uri>\"\n      },\n      \"symbol_id\": \"<symbol_id>\"\n    }\n  },\n  \"status\": \"success\"\n}",
  "stderr": ""
}
