crates/weaver-e2e/tests/snapshots/python_dataclass.snap
---
source: crates/weaver-e2e/tests/get_card_snapshots.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe get-card --uri <uri> --position 4:7 --detail structure",
  "status": 0,
  "stdout": "{\n  \"card\": {\n    \"attachments\": {\n      \"bundle_rule\": \"leading_trivia\",\n      \"decorators\": [\n        \"@dataclass\"\n      ],\n      \"doc_comments\": [],\n      \"normalized\": {\n        \"decorators\": [\n          \"dataclass\"\n        ]\n      }\n    },\n    \"card_version\": 1,\n    \"etag\": \"<etag>\",\n    \"metrics\": {\n      \"cyclomatic\": 1,\n      \"lines\": 3\n    },\n    \"provenance\": {\n      \"extracted_at\": \"<timestamp>\",\n      \"sources\": [\n        \"tree_sitter\"\n      ]\n    },\n    \"structure\": {\n      \"branches\": [],\n      \"locals\": []\n    },\n    \"symbol\": {\n      \"ref\": {\n        \"kind\": \"class\",\n        \"language\": \"python\",\n        \"name\": \"Point\",\n        \"range\": {\n          \"end\": {\n            \"column\": 10,\n            \"line\": 5\n          },\n          \"start\": {\n            \"column\": 0,\n            \"line\": 3\n          }\n        },\n        \"uri\": \"<uri>\"\n      },\n      \"symbol_id\": \"<symbol_id>\"\n    }\n  },\n  \"status\": \"success\"\n}",
  "stderr": ""
}
